# DiFfRG_current

./: .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  install.sh
.github/workflows/: build-ci-images.yml  ci.yml  documentation.yml
DiFfRG/: CMakeLists.txt
DiFfRG/Mathematica/DiFfRG/: PacletInfo.wl
DiFfRG/cmake/: common.cmake  setup_build_system.cmake  verify_install.cmake
DiFfRG/documentation/: .gitignore  Doxyfile.in  build.sh  conf.py  cpp.md  gen_mathematica.py  index.md  python.md  requirements.txt
DiFfRG/documentation/_static/: doxygen-darkmode.css
DiFfRG/documentation/getting_started/: index.md  installation.md  models.md  structure.md
DiFfRG/documentation/tutorials/: index.md  tut1.md  tut2.md  tut3.md  tut4.md
DiFfRG/include/DiFfRG/: DiFfRG.hh
DiFfRG/include/DiFfRG/common/: init.hh  mpi.hh
DiFfRG/include/DiFfRG/discretization/common/: abstract_assembler.hh
DiFfRG/include/DiFfRG/discretization/data/: data_output.hh  fe_output.hh  hdf5.hh  hdf5_input.hh  hdf5_output.hh
DiFfRG/include/DiFfRG/discretization/mesh/: h_adaptivity.hh
DiFfRG/include/DiFfRG/model/: model.hh
DiFfRG/include/DiFfRG/physics/interpolation/: spline_interpolator_1d_stack.hh
DiFfRG/python/DiFfRG/: __init__.py
DiFfRG/src/: CMakeLists.txt
DiFfRG/src/DiFfRG/common/: init.cc  json.cc
DiFfRG/src/DiFfRG/common/quadrature/: matsubara.cc
DiFfRG/src/DiFfRG/discretization/data/: data_output.cc  fe_output.cc  hdf5_input.cc  hdf5_output.cc
DiFfRG/src/DiFfRG/timestepping/: sundials_ida_boost_abm.cc  sundials_ida_boost_rk.cc
DiFfRG/src/DiFfRG/timestepping/solver/: kinsol.cc
DiFfRG/tests/boilerplate/: models.hh  timestepping.hh
DiFfRG/tests/discretization/FEM/: ldg.cc
DiFfRG/tests/discretization/data/: fe_output.cc  hdf5_input.cc  hdf5_output.cc
DiFfRG/tests/hdf5lib/: CMakeLists.txt
DiFfRG/tests/physics/: loop_integrals.cc
DiFfRG/tests/physics/integration/vacuum/: integrator_p2.cc  integrator_p2_1ang.cc
DiFfRG/tests/timestepping/: sundials_ida_boost.cc
Examples/ONfiniteT/: ON.nb  model.hh  model_LDG.hh  parameter.json
Examples/ONfiniteT/flows/V/: V.hh
Examples/ONfiniteT/flows/V/src/: CT_get.cc
Examples/QuarkMesonLPAprime/: CMakeLists.txt  QuarkMesonLPAprime.nb  model.hh  parameter.json  phasediagram.ipynb  plot.ipynb
Examples/QuarkMesonLPAprime/flows/: CMakeLists.txt  flows.cc  flows.hh
Examples/QuarkMesonLPAprime/flows/V/: kernel.hh
Examples/QuarkMesonLPAprime/flows/V/src/: AD_get.cc  CT_get.cc  constructor.cc
Examples/QuarkMesonLPAprime/flows/etaPhi/: etaPhi.hh  kernel.hh  sources.m
Examples/QuarkMesonLPAprime/flows/etaPhi/src/: AD_get.cc  CT_get.cc  constructor.cc
Examples/QuarkMesonLPAprime/flows/etaQ/: etaQ.hh  kernel.hh  sources.m
Examples/QuarkMesonLPAprime/flows/etaQ/src/: AD_get.cc  CT_get.cc  constructor.cc
Examples/QuarkMesonLPAprime/flows/hPhi0/: hPhi0.hh  kernel.hh  sources.m
Examples/QuarkMesonLPAprime/flows/hPhi0/src/: AD_get.cc  CT_get.cc  constructor.cc
Examples/YangMills/Full/: CMakeLists.txt  Yang-Mills.cc  Yang-Mills.m  Yang-Mills.nb  form.set  model.hh  parameter.json  plot.py  tuning.hh
Examples/YangMills/Full/TraceCache/ZA3/: 2.m  3.m
Examples/YangMills/Full/TraceCache/ZA4SP/: 1.m  2.m  3.m  4.m  5.m
Examples/YangMills/Full/TraceCache/ZA4tadpole/: 1.m  2.m  3.m  4.m  5.m
Examples/YangMills/Full/TraceCache/ZAcbc/: 2.m  3.m  4.m  5.m  6.m
Examples/YangMills/Full/flows/: CMakeLists.txt  flows.cc  flows.hh
Examples/YangMills/Full/flows/ZA/: ZA.hh  kernel.hh
Examples/YangMills/Full/flows/ZA/src/: CT_get.cc  CT_map_1.cc
Examples/YangMills/Full/flows/ZA3/: ZA3.hh  kernel.hh
Examples/YangMills/Full/flows/ZA3/src/: CT_get.cc  CT_map_1.cc
Examples/YangMills/Full/flows/ZA4SP/: ZA4SP.hh  kernel.hh  sources.m
Examples/YangMills/Full/flows/ZA4SP/src/: CT_get.cc  CT_map_1.cc  constructor.cc
Examples/YangMills/Full/flows/ZA4tadpole/: ZA4tadpole.hh  kernel.hh  sources.m
Examples/YangMills/Full/flows/ZA4tadpole/src/: CT_get.cc  CT_map_1.cc  constructor.cc
Examples/YangMills/Full/flows/ZAcbc/: ZAcbc.hh  kernel.hh
Examples/YangMills/Full/flows/ZAcbc/src/: CT_get.cc  CT_map_1.cc
Examples/YangMills/Full/flows/Zc/: Zc.hh  kernel.hh
Examples/YangMills/Full/flows/Zc/src/: CT_get.cc  CT_map_1.cc
Examples/YangMills/SP/: Yang-Mills.cc  model.hh  tuning.hh
Tutorials/: .gitignore
Tutorials/tut1/: tut1.cc
Tutorials/tut2/: tut2.cc
Tutorials/tut3/: CMakeLists.txt  parameter.json
Tutorials/tut3/flows/: flows.cc
Tutorials/tut3/flows/V/: kernel.hh
Tutorials/tut3/flows/V/src/: AD_get.cc  constructor.cc
Tutorials/tut4/: CMakeLists.txt  tut4.cc
containers/: build-container.sh  singularity-run.sh  test_all.sh
containers/Base/: debian13  fedora41  ubuntu24.04
containers/CUDA/: rockylinux9_cuda  ubuntu24.04_cuda
containers/ci/: README.md  build-and-push.sh  ubuntu24.04-cuda-deps.Dockerfile  ubuntu24.04-deps.Dockerfile
dependencies/general/: CMakeLists.txt
dependencies/petsc/: CMakeLists.txt
dependencies/sundials/: CMakeLists.txt
patches/: dealii-9.7.1-clang-cuda.patch
